<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beer App</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="liquor">Liquor</string>
    <string name="wine">Wine</string>
    <string name="beer">Beer</string>
    <string name="action_settings">action_settings</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="beer_page">BEER</string>
    <string name="search_bar">search</string>
    <string name="sort">sort</string>
    <string name="add_beer">add beer</string>
    
    <string name="sort_prompt">sort</string>
 
    <string-array name="sort_options">
        <item>Name</item>
        <item>Maker</item>
        <item>ABV</item>
        <item>Type</item>
        <item>Rating</item>
    </string-array>
        <string name="search_hint">search_hint</string>
        <string name="login_title">login_title</string>
        <string name="enter_username">enter_username</string>
        <string name="enter_password">enter_password</string>
        <string name="login">login</string>
        <string name="exit">exit</string>
        <string name="new_user">new_user</string>
        <string name="content">content</string>
        <string name="beer_list">beer_list</string>
        <string name="name">name</string>
        <string name="maker">maker</string>
        <string name="abv">ABV</string>
        <string name="maker_location">maker location</string>
        <string name="type">type</string>
        <string name="user_name">user name</string>
        <string name="password">password</string>
        <string name="confirm_password">confirm password</string>
        <string name="user_email">user email</string>
        <string name="edit_account">edit account</string>
        <string name="logout">logout</string>
        <string name="edit_account_button">edit_account_button</string>
        <string name="logout_button">logout_button</string>
        <string name="edit_beer">edit beer</string>
        <string name="compare_beer">compare beer</string>
        <string name="delete_beer">delete beer</string>
        <string name="findme">findme</string>
        <string name="find">find</string>
        <string name="enter_address_">enter_address_</string>
        <string name="permission_launch_activity">permission_launch_activity</string>
        <string name="add_wine">add wine</string>
        <string name="wine_page">wine page</string>
        <string name="add_liquor">add liquor</string>
        <string name="liquor_page">liquor page</string>
        <string name="add_beverage">add beverage</string>
        <string name="reset_databases">reset databases</string>
        <string name="set">set</string>
        <string name="location_name">location_name</string>
        <string name="reset_all_databases">reset all databases</string>
        <string name="reset_liquor_database">reset liquor database</string>
        <string name="reset_wine_database">reset wine database</string>
        <string name="reset_beer_database">reset beer database</string>

</resources>
