<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button
            android:id="@+id/reset_beer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dip"
            android:text="@string/reset_beer_database" />
    
    <Button
            android:id="@+id/reset_wine_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/reset_wine_database" />
    
    <Button
            android:id="@+id/reset_liquor_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/reset_liquor_database" />
    
    <Button
            android:id="@+id/drop_tables_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/reset_all_databases" />

</LinearLayout>
