<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

     <Button
            android:id="@+id/Beer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:text="@string/beer" />

        <Button
            android:id="@+id/Wine_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/wine" />

        <Button
            android:id="@+id/Liquor_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/liquor" />
          
        <Button
            android:id="@+id/Map_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/map" />
        
        <Button
            android:id="@+id/Settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/settings" />
        
          </LinearLayout>
        
</RelativeLayout>
