<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="20dip" >
    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    	<TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginBottom="15dip"
	            android:text="@string/beer_page"
	            android:textSize="20.5sp" />
	    	
	 		<TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_gravity="left"
	            android:text="@string/search_bar"
	            android:textSize="15.5sp" />
	
	        <EditText
	            android:id="@+id/search_text"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:inputType="text"
	            android:singleLine="true" />
	        
	        <Button
	            android:id="@+id/add_beer_button"
	     		android:layout_marginTop="10dip"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/add_beer" />
	
	        <Spinner
		        android:id="@+id/sort_spinner"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip"
		        android:entries="@array/sort_options"
		        android:prompt="@string/sort_prompt" />
	        
	</LinearLayout>
</ScrollView>
