<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
		 <ListView
			    android:id="@+id/beer_stats"
			    android:layout_marginTop="20dip"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			>
		 </ListView>
		 
		 <Button
	            android:id="@+id/edit_beer_button"
	            android:layout_width="100dip"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="110dip"
	            android:text="@string/edit_beer" />
		 
		 <Button
	            android:id="@+id/compare_beer_button"
	            android:layout_width="100dip"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="110dip"
	            android:text="@string/compare_beer" />
		 
		 <Button
	            android:id="@+id/delete_beer_button"
	            android:layout_width="100dip"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="110dip"
	            android:text="@string/delete_beer" />
		 
</LinearLayout>
