<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginBottom="15dip"
	            android:text="@string/new_user"
	            android:textSize="20.5sp" />
	    	
	 		<TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_gravity="left"
	            android:text="@string/user_name"
	            android:textSize="15.5sp" />
	        <EditText
	            android:id="@+id/user_name_text"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:inputType="text"
	            android:singleLine="true" />
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_gravity="left"
	            android:text="@string/user_email"
	            android:textSize="15.5sp" />
	        <EditText
	            android:id="@+id/user_email_text"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:inputType="text"
	            android:singleLine="true" />
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_gravity="left"
	            android:text="@string/password"
	            android:textSize="15.5sp" />
	        <EditText
	            android:id="@+id/password_text"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:inputType="textPassword"
	            android:singleLine="true" />
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_gravity="left"
	            android:text="@string/confirm_password"
	            android:textSize="15.5sp" />
	        <EditText
	            android:id="@+id/confirm_password_text"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:inputType="textPassword"
	            android:singleLine="true" />
    
</LinearLayout>
